--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
       <h1><a href="index.html">Ruben Garcia Berbel</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Cualificado <span>Administador Informatico</span> de Granollers</h2>
+      <h2>Un hombre atrapado entre dos mundos <span>Administador Informatico</span> / <span>Artista</span></h2>
+      <h2></h2>
+      <h2></h2>
+
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Principal</a></li>
-          <li><a class="nav-link" href="#about">Sobre mi</a></li>
-          <li><a class="nav-link" href="#resume">Resumen</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link" href="#about">Sobre mí</a></li>
+<!--          <li><a class="nav-link" href="#resume">Resumen</a></li>
+          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>-->
           <li><a class="nav-link" href="#contact">Contacto</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -74,8 +77,8 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2>About</h2>
-        <p>Learn more about me</p>
+        <h2>Sobre mí</h2>
+        <p>Aprende más Sobre mí</p>
       </div>
 
       <div class="row">
@@ -83,32 +86,31 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>Administador de sistemas & Programador informatico; Artista</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            ¡Vamoh a darle!
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>31 Dec 1996</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Pagina WEB:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+123 456 7890</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Granollers</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>24</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Estudios:</strong> <span>Superiores</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Puesto:</strong> <span>Adminsitrador de sistesmas en ECI</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            Administrador de sistemas y programador informático con una sólida formación y una excelente experiencia en la administración y mantenimiento de sistema informáticos.
+            Preparado para afrontar nuevos retos y seguir día a día ampliando conocimientos, me considero una persona resolutiva y con ganas de asumir responsabilidades y llegar al próximo nivel.
           </p>
         </div>
       </div>
@@ -317,15 +319,15 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                PUTO CRACK.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
+              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+              <h3>Juan Antonio Navarro</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
           </div><!-- End testimonial item -->
-
+<!--
           <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
@@ -337,8 +339,8 @@
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
             </div>
-          </div><!-- End testimonial item -->
-
+          </div>--><!-- End testimonial item -->
+<!--
           <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
@@ -351,7 +353,7 @@
               <h4>Store Owner</h4>
             </div>
           </div><!-- End testimonial item -->
-
+<!--
           <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
@@ -364,7 +366,7 @@
               <h4>Freelancer</h4>
             </div>
           </div><!-- End testimonial item -->
-
+<!--
           <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
@@ -686,7 +688,7 @@
         <h2>Contact</h2>
         <p>Contact Me</p>
       </div>
-
+<!--
       <div class="row mt-2">
 
         <div class="col-md-6 d-flex align-items-stretch">
@@ -726,7 +728,7 @@
           </div>
         </div>
       </div>
-
+-->
       <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
