--- a/index.html
+++ b/index.html
@@ -730,8 +730,7 @@
       </div>
 -->
 
-      <form action="https://formspree.io/f/xdoyywye"
-  method="POST" role="form" class="php-email-form mt-4">
+      <form action="https://formspree.io/f/xdoyywye" method="POST" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
